[gd_scene load_steps=3 format=3 uid="uid://ds6gbhjrwuel2"]

[ext_resource type="Script" uid="uid://crvnl0duyhqtd" path="res://UI/in_game_hud/gameplay_hud.gd" id="1_c5j6k"]

[sub_resource type="LabelSettings" id="LabelSettings_is8se"]
font_size = 24
outline_size = 6
outline_color = Color(0.0494764, 0.0132215, 0.00171467, 1)

[node name="GameplayHUD" type="Node2D"]
script = ExtResource("1_c5j6k")

[node name="AmmoFacet" type="Node2D" parent="."]

[node name="AmmoLabel" type="Label" parent="AmmoFacet"]
offset_left = 37.0
offset_top = 16.0
offset_right = 138.0
offset_bottom = 55.0
text = "Ammo: "
label_settings = SubResource("LabelSettings_is8se")

[node name="AmmoAmountLabel" type="Label" parent="AmmoFacet"]
offset_left = 138.0
offset_top = 16.0
offset_right = 239.0
offset_bottom = 55.0
label_settings = SubResource("LabelSettings_is8se")

[node name="StaminaFacet" type="Node2D" parent="."]

[node name="StaminaProgressBar" type="ProgressBar" parent="StaminaFacet"]
offset_left = 471.0
offset_top = 16.0
offset_right = 755.0
offset_bottom = 55.0
value = 6.0
show_percentage = false

[node name="AmmoLabel" type="Label" parent="StaminaFacet"]
offset_left = 351.0
offset_top = 16.0
offset_right = 452.0
offset_bottom = 55.0
text = "Stamina:"
label_settings = SubResource("LabelSettings_is8se")

[node name="TimeRemaining" type="RichTextLabel" parent="."]
offset_left = 846.0
offset_top = 69.0
offset_right = 1002.0
offset_bottom = 179.0
scale = Vector2(2.05948, 1)
bbcode_enabled = true
text = "0:00"
